# Projects

./: 3-ARTIN_svm_with_caltech101_sv.ipynb
ARPRO_Mobile-rob/: CMakeCache.txt  Makefile  cmake_install.cmake  envir.cpp  envir.h  main.cpp  plot.py  robot.cpp  robot.h  sensor.h
ARTIN_Lab-1/: 2021-2022-ARTIN-Clustering.ipynb  DEBBACHE_DEMONCEAUX-ARTIN-Clustering.ipynb  MLExo2.4.2-myKMeans.py  untitled0.py
ARTIN_Lab-2/: 3-ARTIN_svm_with_caltech101_sv.ipynb  3-ARTIN_understanding_svms_sv.ipynb
ARTIN_Lab-2/annotations-animals10classes/__MACOSX/octopus/: ._annotation_0001.mat
ARTIN_Lab-3/: 03-decision-trees-demo.ipynb  03-ensembles-sv.ipynb
ARTIN_Lab-4/: Introduction to NNs-sv.ipynb  NNs-sv (copy).ipynb  Pierre_b NNs-sv.ipynb
Maze_VS21/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json
Maze_VS21/include/: a_star.h  maze.h  point.h
Maze_VS21/src/: point.cpp  solve_cell.cpp
Mobile-Robot_VS21/: CMakeLists.txt
Mobile-Robot_VS21/include/: envir.h  geom.h  robot.h  sensor.h
Mobile-Robot_VS21/src/: envir.cpp
Test/ConsoleApplication1/: ConsoleApplication1  ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj  Header.h
Test/ConsoleApplication1/Debug/: ConsoleApplication1.exe.recipe  ConsoleApplication1.ilk  ConsoleApplication1.vcxproj.FileListAbsolute.txt  vc142.idb
Test/ConsoleApplication1/Debug/ConsoleA.b1bb1e4e.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ConsoleApplication1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
